<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Monitor</string>
    <string name="menu_name">JTC-MX-WL</string>
    <string name="menu_btn">Scan</string>
    <string name="menu_copyright">JETEC ELECTRONICSCO.,LTD.</string>
    <string name="mes_title">Open positioning</string>
    <string name="mes_mess">This Android version must to open positioning that can searching BLE devices.</string>
    <string name="mes_yes">Yes</string>
    <string name="mes_no">No</string>
    <string name="BLE_adp">Bluetooth not open!</string>
    <string name="search_device">Searching…</string>
    <string name="app_message">Do you want to close this app?</string>
    <string name="app_message_b1">Exit</string>
    <string name="app_message_b2">Cancel</string>
    <string name="no_device">No device</string>
    <string name="app_bar">Device information</string>
    <string name="company">Jetec</string>
    <string name="pressure">PRESS.</string>
    <string name="temperature">Temp.</string>
    <string name="humidity">RH</string>
    <string name="co">CO</string>
    <string name="co2">CO²</string>
    <string name="pm">PM2.5</string>
    <string name="percent">PR</string>
    <string name="connecting">Connecting</string>
    <string name="butoon_yes">OK</string>
    <string name="butoon_no">CANCEL</string>
    <string name="device_name">Device name</string>
    <string name="T">Temperature</string>
    <string name="H">Humidity</string>
    <string name="C">CO2</string>
    <string name="CO">CO</string>
    <string name="P">Pressure</string>
    <string name="M">PM2.5</string>
    <string name="W">overflow</string>
    <string name="I">4~20mA</string>
    <string name="I1">1st</string>
    <string name="I2">2nd</string>
    <string name="I3">3rd</string>
    <string name="PV1">offset</string>
    <string name="PV2">offset</string>
    <string name="PV3">offset</string>
    <string name="EH1">alarm max</string>
    <string name="EH2">alarm max</string>
    <string name="EH3">alarm max</string>
    <string name="EL1">alarm min</string>
    <string name="EL2">alarm min</string>
    <string name="EL3">alarm min</string>
    <string name="SPK">Alter</string>
    <string name="ADR">Address</string>
    <string name="DP1">decimal point</string>
    <string name="DP2">decimal point</string>
    <string name="DP3">decimal point</string>
    <string name="RL">Alert source</string>
    <string name="password">Please enter your password</string>
    <string name="passworderror">Password error</string>
    <string name="action_settings">Disconnect</string>
    <string name="record">Alert Record</string>
    <string name="no_record">No Record</string>
    <string name="deleterecord">Delete Record</string>
    <string name="delete_message">Do you want to delete all record?</string>
    <string name="allrecord">All record</string>
    <string name="sortrecord">Sort record</string>
    <string name="export">Export</string>
    <string name="exportmessage">Please chose format to export data</string>
    <string name="DeviceName">Device name:</string>
    <string name="Date">Date:</string>
    <string name="Alert">Alert value:</string>
    <string name="recordT">Temperature:</string>
    <string name="recordH">Humidity:</string>
    <string name="recordC">CO2:</string>
    <string name="recordCO">CO:</string>
    <string name="recordP">Pressure:</string>
    <string name="recordM">PM2.5:</string>
    <string name="recordpercent">Proportion:</string>
    <string name="identify">Identifier:</string>
    <string name="exportingcsv">Exporting csv…</string>
    <string name="exportingpdf">Exporting pdf…</string>
    <string name="send_to">Chose an app what you want to share with.</string>
    <string name="pdfdate">Date</string>
    <string name="pdfT">Temperature</string>
    <string name="pdfH">Humidity</string>
    <string name="pdfC">CO2</string>
    <string name="pdfCO">CO</string>
    <string name="pdfP">Pressure</string>
    <string name="pdfM">PM2.5</string>
    <string name="pdfpercent">Proportion</string>
    <string name="PDFreport">PDF report</string>
    <string name="print">Print</string>
    <string name="changename">Device name</string>
    <string name="percentadjustment">Proportion adjustment</string>
    <string name="wrong">Wrong value!</string>
    <string name="max">It should be kept above the minimum</string>
    <string name="min">It should be kept below the maxmum</string>
    <string name="none">None</string>
    <string name="sensor">Sensors</string>
    <string name="switchs">Switch</string>
    <string name="switchname">Switch name</string>
    <string name="bar_phonecall">Consultation</string>
    <string name="power">power :</string>
    <string name="LOG">Log record</string>
    <string name="showdialog">Show dialog</string>
    <string name="datadownload">Download data</string>
    <string name="loadbar">Load set up</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="closedialog">Close</string>
    <string name="namedialog">Data name</string>
    <string name="adddialog">Add</string>
    <string name="listdialog">Data list</string>
    <string name="deldialog">Delete</string>
    <string name="updialog">Modify</string>
    <string name="listdata">No data</string>
    <string name="savedialog">Save set up</string>
    <string name="change">Modify name</string>
    <string name="name">Name</string>
    <string name="addblank">Do not blank!</string>
    <string name="same">Have the same name</string>
    <string name="INTER">Log interval</string>
    <string name="interval">Interval</string>
    <string name="hour">Hour:</string>
    <string name="minute">Minute:</string>
    <string name="seconds">Seconds:</string>
    <string name="description">The time interval must be between 60 seconds and 1 hour</string>
    <string name="warning">Warning!</string>
    <string name="reinterval">It will stop the record and clean all records data.</string>
    <string name="restart">It will restart records and clean all records data.</string>
    <string name="stoprecord">It will stop the record and start downloading.</string>
    <string name="intervalset">Setting…</string>
    <string name="stable">Stable</string>
    <string name="highspeed">HighSpeed</string>
    <string name="logdata">There is no data!</string>
    <string name="chosedialog">Dialog</string>
    <string name="listdialogdata">List data</string>
    <string name="view">report</string>
    <string name="report">Data report</string>
    <string name="choose">Choose the export method</string>
    <string name="CSV">CSV</string>
    <string name="PDF">PDF</string>
    <string name="chartlist">Chose chart</string>
    <string name="Combine">Combine chart</string>
    <string name="UL">upper limit</string>
    <string name="LL">lower limit</string>
    <string name="pdftime">Time</string>
    <string name="datalog">Data List</string>
    <string name="datetime">Date and Time</string>
    <string name="size">Recode number</string>
    <string name="screening">Data screening</string>
    <string name="condition1">Item</string>
    <string name="condition2">Delimit</string>
    <string name="condition3">Value</string>
    <string name="value_edit">Input a value</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="searching">Search</string>
    <string name="timerange">Range</string>
</resources>
