<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:background="@drawable/side_nav_bar"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sensors"
            android:icon="@drawable/sensors"
            android:title="@string/sensor" />
        <item
            android:id="@+id/switchs"
            android:icon="@drawable/switchs"
            android:title="@string/switchs" />
    </group>

    <group
        android:id="@+id/nav_commnunicate"
        android:title="">
        <item
            android:id="@+id/url_phonecall"
            android:icon="@drawable/phonecall"
            android:title="@string/bar_phonecall" />
    </group>
</menu>
